--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venta de Carros Torres Mochas</title>
-    <link rel="shortcut icon" href="images/compa1.svg" type="image/x-icon">
+    <title>Tianguis de autos El Bajio</title>
+    <link rel="shortcut icon" href="image/icono.png" type="image/x-icon">
     
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
@@ -22,7 +22,7 @@
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"> <span>Torres </span>Mochas </a>
+    <a href="#" class="logo"> <span>Tianguis de autos </span> El Bajio </a>
 
     <nav class="navbar">
         <a href="#home">Inicio</a>
@@ -45,17 +45,17 @@
     <span id="close-login-form" class="fas fa-times"></span>
 
     <form action="">
-        <h3>user login</h3>
+        <h3>Acceso</h3>
         <input type="email" placeholder="email" class="box">
         <input type="password" placeholder="password" class="box">
-        <p> forget your password <a href="#">click here</a> </p>
+        <p> Escribe tu clave <a href="#">Presiona aquí</a> </p>
         <input type="submit" value="login" class="btn">
-        <p>or login with</p>
+        <p>o registrate</p>
         <div class="buttons">
             <a href="#" class="btn"> google </a>
             <a href="#" class="btn"> facebook </a>
         </div>
-        <p> don't have an account <a href="#">create one</a> </p>
+        <p> no tienes una cuenta <a href="#">crea una</a> </p>
     </form>
 
 </div>
@@ -75,15 +75,15 @@
     <div class="icons">
         <i class="fas fa-home"></i>
         <div class="content">
-            <h3>150+</h3>
-            <p>branches</p>
+            <h3>4+</h3>
+            <p>Sucursales</p>
         </div>
     </div>
 
     <div class="icons">
         <i class="fas fa-car"></i>
         <div class="content">
-            <h3>4770+</h3>
+            <h3>100+</h3>
             <p>Carros Vendidos</p>
         </div>
     </div>
@@ -91,7 +91,7 @@
     <div class="icons">
         <i class="fas fa-users"></i>
         <div class="content">
-            <h3>320+</h3>
+            <h3>100+</h3>
             <p>Clientes Felices</p>
         </div>
     </div>
@@ -99,8 +99,8 @@
     <div class="icons">
         <i class="fas fa-car"></i>
         <div class="content">
-            <h3>1500+</h3>
-            <p>Carros Nuevos</p>
+            <h3>100+</h3>
+            <p>Carros disponibles</p>
         </div>
     </div>
 
@@ -108,103 +108,103 @@
 
 <section class="vehicles" id="vehicles">
 
-    <h1 class="heading"> Vehiculos <span>Populares</span> </h1>
+    <h1 class="heading"> Carros <span>Nuevos</span> </h1>
 
     <div class="swiper vehicles-slider">
 
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide box">
-                <img src="image/vehicle-1.png" alt="">
+            <div class="swiper-slide box" id="vehi1">
+                <img src="image/c1.png" alt="">
                 <div class="content">
                     <h3>modelos nuevos</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>price : </span> $262,000/- </div>
                     <p>
                         Nuevo
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
-                    <a href="#" class="btn">revisalo</a>
+                    <a href="carros-nuevos.html#car1" class="btn">revisalo</a>
                 </div>
             </div>
 
-            <div class="swiper-slide box">
-                <img src="image/vehicle-2.png" alt="">
+            <div class="swiper-slide box" id="vehi2">
+                <img src="image/car-2.png" alt="">
                 <div class="content">
                     <h3>nuevo modelo</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>precio : </span> $356,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
-                    <a href="#" class="btn">Revisalo</a>
+                    <a href="carros-nuevos.html#car2" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-3.png" alt="">
+                <img src="image/c7.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>precio : </span> $225,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
                     <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-4.png" alt="">
+                <img src="image/c4.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>precio : </span> $462,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
                     <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-5.png" alt="">
+                <img src="image/c5.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>precio : </span> $582,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
                     <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/vehicle-6.png" alt="">
+                <img src="image/c6.png" alt="">
                 <div class="content">
                     <h3>nuevo modelo</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <div class="price"> <span>precio : </span> $462,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2021
-                        <span class="fas fa-circle"></span> automatic
-                        <span class="fas fa-circle"></span> petrol
-                        <span class="fas fa-circle"></span> 183mph
+                        <span class="fas fa-circle"></span> 2022
+                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> gasolina
+                        <span class="fas fa-circle"></span> 0 km
                     </p>
                     <a href="#" class="btn">revisalo</a>
                 </div>
@@ -226,44 +226,44 @@
 
         <div class="box">
             <i class="fas fa-car"></i>
-            <h3>venta de autos</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <h3>Venta de Autos</h3>
+            <p>Los autos dentro de la plataforma estan devidamente revisados con papeles en regla para un servicio confiable y de calidad.</p>
+            <a href="#" class="btn"> leer más</a>
         </div>
 
         <div class="box">
             <i class="fas fa-tools"></i>
-            <h3>refacciones</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <h3>Refacciones</h3>
+            <p>Contamos conel mas extenso catalogo de refacciones para todas las marcas.</p>
+            <a href="#" class="btn"> Leer más</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-crash"></i>
-            <h3>seguro de autos</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <h3>Seguro de Autos</h3>
+            <p>Te garantizamos el mejor precio. No te quedes sin tu seguro de coche, contrata.</p>
+            <a href="#" class="btn"> Leer más</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-battery"></i>
-            <h3>cambio de baterias</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <h3>Cambio de Baterias</h3>
+            <p>Cambiar la batería de un coche es, a priori, una de las tareas más comunes y sencillas de realizar en un taller.</p>
+            <a href="#" class="btn"> Leer más</a>
         </div>
 
         <div class="box">
             <i class="fas fa-gas-pump"></i>
-            <h3>cambio de aceite</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <h3>Cambio de Aceite</h3>
+            <p>El motor es el corazón de un vehículo y para que funcione correctamente es muy importante que esté bien lubricado.</p>
+            <a href="#" class="btn"> Leer más</a>
         </div>
 
         <div class="box">
             <i class="fas fa-headset"></i>
             <h3>Atencion 24/7</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, nisi.</p>
-            <a href="#" class="btn"> read more</a>
+            <p>Tenemos para tu comodidad servcio las 24hrs del dia para atencion mecanica de tu vehiculo.</p>
+            <a href="#" class="btn"> Leer más</a>
         </div>
 
     </div>
@@ -272,7 +272,7 @@
 
 <section class="featured" id="featured">
 
-    <h1 class="heading"> <span>Autos</span> destacados </h1>
+    <h1 class="heading"> <span>Autos</span> Usados </h1>
 
     <div class="swiper featured-slider">
 
@@ -289,8 +289,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <div class="price">$55,000/-</div>
-                    <a href="#" class="btn">check out</a>
+                    <div class="price">$195,000/-</div>
+                    <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
@@ -305,8 +305,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <div class="price">$55,000/-</div>
-                    <a href="#" class="btn">check out</a>
+                    <div class="price">$255,000/-</div>
+                    <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
@@ -321,8 +321,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <div class="price">$55,000/-</div>
-                    <a href="#" class="btn">check out</a>
+                    <div class="price">$155,000/-</div>
+                    <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
@@ -337,8 +337,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
                     </div>
-                    <div class="price">$55,000/-</div>
-                    <a href="#" class="btn">check out</a>
+                    <div class="price">$215,000/-</div>
+                    <a href="#" class="btn">Revisalo</a>
                 </div>
             </div>
 
@@ -363,8 +363,8 @@
                          <i class="fas fa-star"></i>
                          <i class="fas fa-star-half-alt"></i>
                      </div>
-                     <div class="price">$55,000/-</div>
-                     <a href="#" class="btn">check out</a>
+                     <div class="price">$205,000/-</div>
+                     <a href="#" class="btn">Revisalo</a>
                  </div>
              </div>
  
@@ -379,8 +379,8 @@
                          <i class="fas fa-star"></i>
                          <i class="fas fa-star-half-alt"></i>
                      </div>
-                     <div class="price">$55,000/-</div>
-                     <a href="#" class="btn">check out</a>
+                     <div class="price">$185,000/-</div>
+                     <a href="#" class="btn">Revisalo</a>
                  </div>
              </div>
  
@@ -395,8 +395,8 @@
                          <i class="fas fa-star"></i>
                          <i class="fas fa-star-half-alt"></i>
                      </div>
-                     <div class="price">$55,000/-</div>
-                     <a href="#" class="btn">check out</a>
+                     <div class="price">$155,000/-</div>
+                     <a href="#" class="btn">Revisalo</a>
                  </div>
              </div>
  
@@ -411,8 +411,8 @@
                          <i class="fas fa-star"></i>
                          <i class="fas fa-star-half-alt"></i>
                      </div>
-                     <div class="price">$55,000/-</div>
-                     <a href="#" class="btn">check out</a>
+                     <div class="price">$255,000/-</div>
+                     <a href="#" class="btn">Revisalo</a>
                  </div>
              </div>
  
@@ -426,8 +426,8 @@
 
 <section class="newsletter">
     
-    <h3>subscribe for latest updates</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, suscipit.</p>
+    <h3>subscribe para más recomendaciones y noticias</h3>
+    <p>Para recibir actualizaciones, los nuevos vehiculos en la plataforma y más.</p>
 
    <form action="">
         <input type="email" placeholder="enter your email">
@@ -438,7 +438,7 @@
 
 <section class="reviews" id="reviews">
 
-    <h1 class="heading"> client's <span>review</span> </h1>
+    <h1 class="heading"> Opiniones <span>Clientes</span> </h1>
 
     <div class="swiper review-slider">
 
@@ -569,7 +569,7 @@
 
         <div class="box">
             <h3>area de servicio</h3>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> Leon </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> León </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Silao </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Dolores </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Ocampo </a>
@@ -621,6 +621,7 @@
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
 <script src="js/script.js"></script>
+<script src="js/modal.js"></script>
 
 </body>
 </html>
