--- a/carros-usado.html
+++ b/carros-usado.html
@@ -126,7 +126,7 @@
 
             </form>
 
-            <a href="#"><button class="btn"> <i class="fas fa-shopping-cart"></i> add to cart </button></a>
+            <a href="#"><button class="btn"> <i class="fas fa-shopping-cart"></i> agregar al carrito </button></a>
             <span class="stock"> <i class="fas fa-check"></i> in stock </span>
             <div class="share">
                 <a href="#">facebook</a>
