--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="image/c1.png" alt="">
                 <div class="content">
                     <h3>modelos nuevos</h3>
-                    <div class="price"> <span>price : </span> $262,000/- </div>
+                    <div class="price"> <span>price : </span> $$$$/- </div>
                     <p>
                         Nuevo
                         <span class="fas fa-circle"></span> 2022
@@ -134,7 +134,7 @@
                 <img src="image/car-2.png" alt="">
                 <div class="content">
                     <h3>nuevo modelo</h3>
-                    <div class="price"> <span>precio : </span> $356,000/- </div>
+                    <div class="price"> <span>precio : </span> $$$$/- </div>
                     <p>
                         new
                         <span class="fas fa-circle"></span> 2022
@@ -147,10 +147,10 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/c7.png" alt="">
+                <img src="image/c2.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $225,000/- </div>
+                    <div class="price"> <span>precio : </span> $$$$/- </div>
                     <p>
                         new
                         <span class="fas fa-circle"></span> 2022
@@ -166,7 +166,7 @@
                 <img src="image/c4.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $462,000/- </div>
+                    <div class="price"> <span>precio : </span> $$$$$/- </div>
                     <p>
                         new
                         <span class="fas fa-circle"></span> 2022
@@ -182,7 +182,7 @@
                 <img src="image/c5.png" alt="">
                 <div class="content">
                     <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $582,000/- </div>
+                    <div class="price"> <span>precio : </span> $$$$$/- </div>
                     <p>
                         new
                         <span class="fas fa-circle"></span> 2022
@@ -198,7 +198,7 @@
                 <img src="image/c6.png" alt="">
                 <div class="content">
                     <h3>nuevo modelo</h3>
-                    <div class="price"> <span>precio : </span> $462,000/- </div>
+                    <div class="price"> <span>precio : </span> $$$$$/- </div>
                     <p>
                         new
                         <span class="fas fa-circle"></span> 2022
