--- a/carros-nuevos.html
+++ b/carros-nuevos.html
@@ -63,7 +63,7 @@
 
             </form>
 
-            <a href="#"><button class="btn"> <i class="fas fa-shopping-cart"></i> add to cart </button></a>
+            <a href="https://wa.link/o9g1o5"><button class="btn"> <i class="fas fa-shopping-cart"></i> add to cart </button></a>
             <span class="stock"> <i class="fas fa-check"></i> in stock </span>
             <div class="share">
                 <a href="#">facebook</a>
@@ -84,50 +84,48 @@
         <div class="image-container">
 
             <div class="big-image">
-                <img src="image/car-1.png" alt="">
+                <img src="img/vw gol/1.jpg" alt="">
             </div>
 
             <div class="small-image">
-                <img class="active" src="image/car-2.png" alt="">
-                <img src="image/car-3.png" alt="">
-                <img src="image/car-4.png" alt="">
+                <img class="active" src="img/vw gol/260343949_4499993670108358_4372352937073776771_n.jpg" alt="">
+                <img src="img/vw gol/263090974_4519919358122880_5360889651918847387_n.jpg" alt="">
+                <img src="img/vw gol/262862813_4521414047914394_7161870194976693019_n.jpg" alt="">
             </div>
 
         </div>
 
         <div class="content">
 
-            <h3 class="title">watch for men</h3>
-            <div class="price">₹1000/-</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, rerum.</p>
+            <h3 class="title">V.W. Gol Sedan Std.</h3>
+            <div class="price">$169,000</div>
+            <p>Este vehículo no tiene ningún daño ni problema específico. Listo para que lo manejes</p>
 
             <form action="">
 
                 <div class="dropDown">
-                    <span> size : </span>
+                    <span> Datos : </span>
                     <select name="" id="">
-                        <option value="small">small</option>
-                        <option value="medium">medium</option>
-                        <option value="large">large</option>
-                        <option value="extra large">extra large</option>
+                        <option value="small">Transmisión manual</option>
+                        <option value="medium">Gasolina</option>
+                        <option value="large">Motor 1.6 Lts</option>
+                        <option value="extra large">Alarma acustica y Óptica</option>
                     </select>
                     <span> color : </span>
                     <select name="" id="">
-                        <option value="black">black</option>
-                        <option value="blue">blue</option>
-                        <option value="white">white</option>
+                        <option value="black">blanco</option>
                     </select>
                 </div>
 
                 <div class="quantity">
-                    <span> quantity : </span>
+                    <span> cantidad : </span>
                     <input type="number" value="1">
                 </div>
 
             </form>
 
-            <a href="#"><button class="btn"> <i class="fas fa-shopping-cart"></i> add to cart </button></a>
-            <span class="stock"> <i class="fas fa-check"></i> in stock </span>
+            <a href="https://wa.link/o9g1o5"><button class="btn"> <i class="fas fa-shopping-cart"></i> Contacto </button></a>
+            <span class="stock"> <i class="fas fa-check"></i> en existencia </span>
             <div class="share">
                 <a href="#">facebook</a>
                 <a href="#">twitter</a>
