--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar">
         <a href="#home">Inicio</a>
-        <a href="#vehicles">Vehicles</a>
+        <a href="#vehicles">Carros</a>
         <a href="#services">Services</a>
         <a href="#featured">Destacados</a>
         <a href="#reviews">Opiniones</a>
@@ -66,7 +66,7 @@
 
     <img data-speed="5" class="home-parallax" src="image/home-img.png" alt="">
 
-    <a data-speed="7" href="#" class="btn home-parallax">Explora Autos</a>
+    <a data-speed="7" href="carros-usado.html" class="btn home-parallax">Explora Autos</a>
 
 </section>
 
@@ -108,36 +108,36 @@
 
 <section class="vehicles" id="vehicles">
 
-    <h1 class="heading"> Carros <span>Nuevos</span> </h1>
+    <h1 class="heading"> Carros <span> Semi-Nuevos</span> </h1>
 
     <div class="swiper vehicles-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box" id="vehi1">
-                <img src="image/c1.png" alt="">
+                <img src="img/Chevrolet aveo/1.jpg" alt="">
                 <div class="content">
-                    <h3>modelos nuevos</h3>
-                    <div class="price"> <span>price : </span> $262,000/- </div>
+                    <h3>Chevrolet AVEO 2020</h3>
+                    <div class="price"> <span>costo : </span> $215,000/- </div>
                     <p>
-                        Nuevo
-                        <span class="fas fa-circle"></span> 2022
+                        Semi-nuevo
+                        <span class="fas fa-circle"></span> 2020
                         <span class="fas fa-circle"></span> automatico
                         <span class="fas fa-circle"></span> gasolina
-                        <span class="fas fa-circle"></span> 0 km
+                        <span class="fas fa-circle"></span> 32,000 km
                     </p>
-                    <a href="carros-nuevos.html#car1" class="btn">revisalo</a>
+                    <a href="carros-usado.html#car2" class="btn">revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box" id="vehi2">
-                <img src="image/car-2.png" alt="">
+                <img src="img/vw gol/1.jpg" alt="">
                 <div class="content">
-                    <h3>nuevo modelo</h3>
-                    <div class="price"> <span>precio : </span> $356,000/- </div>
+                    <h3>V.W. Gol Sedan Std.</h3>
+                    <div class="price"> <span>precio : </span> $169,000/- </div>
                     <p>
-                        new
-                        <span class="fas fa-circle"></span> 2022
+                        Semi-nuevo
+                        <span class="fas fa-circle"></span> 2017
                         <span class="fas fa-circle"></span> automatico
                         <span class="fas fa-circle"></span> gasolina
                         <span class="fas fa-circle"></span> 0 km
@@ -147,66 +147,66 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/c7.png" alt="">
+                <img src="img/chevrolet cavalir $190,000/272255015_10219166971836913_5199457931526292771_n.jpg" alt="">
                 <div class="content">
-                    <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $225,000/- </div>
+                    <h3>Chevrolet Cavalier 2018</h3>
+                    <div class="price"> <span>precio : </span> $230,000/- </div>
                     <p>
                         new
-                        <span class="fas fa-circle"></span> 2022
-                        <span class="fas fa-circle"></span> automatico
+                        <span class="fas fa-circle"></span> 2018
+                        <span class="fas fa-circle"></span> manual
                         <span class="fas fa-circle"></span> gasolina
-                        <span class="fas fa-circle"></span> 0 km
+                        <span class="fas fa-circle"></span> 71,800 km
                     </p>
-                    <a href="#" class="btn">Revisalo</a>
+                    <a href="carros-usado.html#car3" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/c4.png" alt="">
+                <img src="img/ford f-250/273137423_4356062261160827_2891521110736475289_n.jpg" alt="">
                 <div class="content">
-                    <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $462,000/- </div>
+                    <h3>FORD F-250</h3>
+                    <div class="price"> <span>precio : </span> $205,000/- </div>
                     <p>
-                        new
-                        <span class="fas fa-circle"></span> 2022
+                        semi-nuevo
+                        <span class="fas fa-circle"></span> 2000
                         <span class="fas fa-circle"></span> automatico
-                        <span class="fas fa-circle"></span> gasolina
-                        <span class="fas fa-circle"></span> 0 km
+                        <span class="fas fa-circle"></span> diesel
+                        <span class="fas fa-circle"></span> 125,000 km
                     </p>
-                    <a href="#" class="btn">Revisalo</a>
+                    <a href="carros-usado.html#car5" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/c5.png" alt="">
+                <img src="img/jetta 2019/2.jpg" alt="">
                 <div class="content">
-                    <h3>Nuevo Modelo</h3>
-                    <div class="price"> <span>precio : </span> $582,000/- </div>
+                    <h3>V.W. Jetta 2019</h3>
+                    <div class="price"> <span>precio : </span> $348,000/- </div>
                     <p>
-                        new
-                        <span class="fas fa-circle"></span> 2022
-                        <span class="fas fa-circle"></span> automatico
+                        semi-nuevo
+                        <span class="fas fa-circle"></span> 2019
+                        <span class="fas fa-circle"></span> estandar
                         <span class="fas fa-circle"></span> gasolina
-                        <span class="fas fa-circle"></span> 0 km
+                        <span class="fas fa-circle"></span> 48,000 km
                     </p>
-                    <a href="#" class="btn">Revisalo</a>
+                    <a href="carros-usado.html#car6" class="btn">Revisalo</a>
                 </div>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/c6.png" alt="">
+                <img src="img/cruze chevrolet 2010/272766614_4740357326040443_3620253004466175863_n.jpg" alt="">
                 <div class="content">
-                    <h3>nuevo modelo</h3>
-                    <div class="price"> <span>precio : </span> $462,000/- </div>
+                    <h3>Chevrolet Cruze 2010</h3>
+                    <div class="price"> <span>precio : </span> $97,000/- </div>
                     <p>
-                        new
-                        <span class="fas fa-circle"></span> 2022
+                        usado
+                        <span class="fas fa-circle"></span> 2010
                         <span class="fas fa-circle"></span> automatico
                         <span class="fas fa-circle"></span> gasolina
-                        <span class="fas fa-circle"></span> 0 km
+                        <span class="fas fa-circle"></span> 95,000 km
                     </p>
-                    <a href="#" class="btn">revisalo</a>
+                    <a href="carros-usado.html#car4" class="btn">revisalo</a>
                 </div>
             </div>
 
@@ -279,7 +279,7 @@
        <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/car-1.png" alt="">
+                <img src="img/cavalier 1996/1.jpg" alt="">
                 <div class="content">
                     <h3>Usado</h3>
                     <div class="stars">
@@ -295,7 +295,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/car-2.png" alt="">
+                <img src="img/Chevrolet aveo/1.jpg" alt="">
                 <div class="content">
                     <h3>usado</h3>
                     <div class="stars">
@@ -311,7 +311,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/car-3.png" alt="">
+                <img src="img/chevrolet cavalir $190,000/272255015_10219166971836913_5199457931526292771_n.jpg" alt="">
                 <div class="content">
                     <h3>usado</h3>
                     <div class="stars">
@@ -327,7 +327,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/car-4.png" alt="">
+                <img src="img/cruze chevrolet 2010/1.jpg" alt="">
                 <div class="content">
                     <h3>usado</h3>
                     <div class="stars">
@@ -353,7 +353,7 @@
         <div class="swiper-wrapper">
  
              <div class="swiper-slide box">
-                 <img src="image/car-5.png" alt="">
+                 <img src="img/ford f-250/273137423_4356062261160827_2891521110736475289_n.jpg" alt="">
                  <div class="content">
                      <h3>usado</h3>
                      <div class="stars">
@@ -369,7 +369,7 @@
              </div>
  
              <div class="swiper-slide box">
-                 <img src="image/car-6.png" alt="">
+                 <img src="img/jetta 2019/2.jpg" alt="">
                  <div class="content">
                      <h3>usado</h3>
                      <div class="stars">
@@ -385,7 +385,7 @@
              </div>
  
              <div class="swiper-slide box">
-                 <img src="image/car-7.png" alt="">
+                 <img src="img/peugeot 206 2003/1.jpg" alt="">
                  <div class="content">
                      <h3>usado</h3>
                      <div class="stars">
@@ -401,7 +401,7 @@
              </div>
  
              <div class="swiper-slide box">
-                 <img src="image/car-8.png" alt="">
+                 <img src="img/toyota camry 2000/1.jpg" alt="">
                  <div class="content">
                      <h3>usado</h3>
                      <div class="stars">
@@ -447,8 +447,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>Me ayudaron a vender mi carro, con la mejor atencion y servicio estoy muy contento</p>
+                    <h3>Rodrigo Hérnandez</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -462,8 +462,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>Compre un carro dentro de la plataforma y todo salio de maravilla los recomiendo mucho.</p>
+                    <h3>Julia Ramírez</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -477,8 +477,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>Vendi mi auto antes de lo que esperaba una exelente atencion y servicio</p>
+                    <h3>Diego Rocha</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -492,8 +492,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>Muy confiable para la hora de anunciar mi vehiculo, me diero opcion de comicion o solo pagar mi lugar, opte por la segunda quede satisfecha.</p>
+                    <h3>Vero Hernández</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -507,23 +507,8 @@
             <div class="swiper-slide box">
                 <img src="image/pic-5.png" alt="">
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <img src="image/pic-6.png" alt="">
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam incidunt quod praesentium iusto id autem possimus assumenda at ut saepe.</p>
-                    <h3>john deo</h3>
+                    <p>Me parece muy funcionál la descripción que me brindaron del carro que compre, les agradezco su recomendacion.</p>
+                    <h3>Juan Restrepo</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -548,15 +533,15 @@
 
     <div class="row">
 
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1632137920043!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14849.719339251578!2d-101.19571785!3d21.490877349999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842afd78a2376df7%3A0xea97106b7f9b868f!2sC.%207%2C%20Dr%20Hernandez%20Alvarez%2C%2037600%20San%20Felipe%2C%20Gto.!5e0!3m2!1ses!2smx!4v1644354064145!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-        <form action="">
+        <form action="https://wa.link/o9g1o5">
             <h3>Registrate</h3>
-            <input type="text" placeholder="your name" class="box">
-            <input type="email" placeholder="your email" class="box">
-            <input type="tel" placeholder="subject" class="box">
-            <textarea placeholder="your message" class="box" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
+            <input type="text" placeholder="nombre completo" class="box">
+            <input type="email" placeholder="e-mail" class="box">
+            <input type="tel" placeholder="Telefono" class="box">
+            <textarea placeholder="mensaje" class="box" cols="30" rows="10"></textarea>
+            <input type="submit" value="enviar" class="btn">
         </form>
 
     </div>
@@ -579,27 +564,27 @@
         <div class="box">
             <h3>Enlaces</h3>
             <a href="#"> <i class="fas fa-arrow-right"></i> inicio </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> carros </a>
+            <a href="carros-usado.html"> <i class="fas fa-arrow-right"></i> carros </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> servicios </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> destacados </a>
+            <a href="#featured"> <i class="fas fa-arrow-right"></i> destacados </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> opiniones </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> contacto </a>
         </div>
 
         <div class="box">
             <h3>informacion de contacto</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
+            <a href="tel:4286902266"> <i class="fas fa-phone"></i> 428-690-2266 </a>
+            <a href="tel:4281175664"> <i class="fas fa-phone"></i> 428-1175-664 </a>
+            <a href="mailto:jetse30@gmail.com"> <i class="fas fa-envelope"></i> jetse30@gmail.com </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> San Felipe,Gto.,México, C.P. 37600 </a>
         </div>
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
+            <a href="https://www.facebook.com/jooperez2010/?ref=pages_you_manage"> <i class="fab fa-facebook-f"></i> facebook </a>
+            <a href="https://twitter.com/AUTEGT"> <i class="fab fa-twitter"></i> twitter </a>
             <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+            <a href="https://www.linkedin.com/in/jos%C3%A9-everardo-p%C3%A9rez-estrada-3b5a4534/"> <i class="fab fa-linkedin"></i> linkedin </a>
             <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
         </div>
 
