--- a/index.html
+++ b/index.html
@@ -228,42 +228,42 @@
             <i class="fas fa-car"></i>
             <h3>Venta de Autos</h3>
             <p>Los autos dentro de la plataforma estan devidamente revisados con papeles en regla para un servicio confiable y de calidad.</p>
-            <a href="#" class="btn"> leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto </a>
         </div>
 
         <div class="box">
             <i class="fas fa-tools"></i>
             <h3>Refacciones</h3>
             <p>Contamos conel mas extenso catalogo de refacciones para todas las marcas.</p>
-            <a href="#" class="btn"> Leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-crash"></i>
             <h3>Seguro de Autos</h3>
             <p>Te garantizamos el mejor precio. No te quedes sin tu seguro de coche, contrata.</p>
-            <a href="#" class="btn"> Leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto</a>
         </div>
 
         <div class="box">
             <i class="fas fa-car-battery"></i>
             <h3>Cambio de Baterias</h3>
             <p>Cambiar la batería de un coche es, a priori, una de las tareas más comunes y sencillas de realizar en un taller.</p>
-            <a href="#" class="btn"> Leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto</a>
         </div>
 
         <div class="box">
             <i class="fas fa-gas-pump"></i>
             <h3>Cambio de Aceite</h3>
             <p>El motor es el corazón de un vehículo y para que funcione correctamente es muy importante que esté bien lubricado.</p>
-            <a href="#" class="btn"> Leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto</a>
         </div>
 
         <div class="box">
             <i class="fas fa-headset"></i>
             <h3>Atencion 24/7</h3>
             <p>Tenemos para tu comodidad servcio las 24hrs del dia para atencion mecanica de tu vehiculo.</p>
-            <a href="#" class="btn"> Leer más</a>
+            <a href="https://wa.link/8klv66" class="btn"> Contacto</a>
         </div>
 
     </div>
