--- a/index.html
+++ b/index.html
@@ -429,8 +429,9 @@
     <h3>subscribe para más recomendaciones y noticias</h3>
     <p>Para recibir actualizaciones, los nuevos vehiculos en la plataforma y más.</p>
 
-   <form action="">
-        <input type="email" placeholder="enter your email">
+   <form  action="https://formspree.io/f/mdobernp"
+  method="POST">
+        <input type="email" placeholder="enter your email" name="_replyto">
         <input type="submit" value="subscribe">
    </form>
 
@@ -535,12 +536,13 @@
 
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14849.719339251578!2d-101.19571785!3d21.490877349999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842afd78a2376df7%3A0xea97106b7f9b868f!2sC.%207%2C%20Dr%20Hernandez%20Alvarez%2C%2037600%20San%20Felipe%2C%20Gto.!5e0!3m2!1ses!2smx!4v1644354064145!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-        <form action="https://wa.link/o9g1o5">
+        <form action="https://formspree.io/f/mbjwgenz"
+        method="POST">
             <h3>Registrate</h3>
-            <input type="text" placeholder="nombre completo" class="box">
-            <input type="email" placeholder="e-mail" class="box">
-            <input type="tel" placeholder="Telefono" class="box">
-            <textarea placeholder="mensaje" class="box" cols="30" rows="10"></textarea>
+            <input type="text" placeholder="nombre completo" class="box" name="name">
+            <input type="email" placeholder="e-mail" class="box" name="_replyto">
+            <input type="tel" placeholder="Telefono" class="box" name="tel">
+            <textarea placeholder="mensaje" class="box" cols="30" rows="10" name="message"></textarea>
             <input type="submit" value="enviar" class="btn">
         </form>
 
